fix z-index of sidebar

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,5 +1,6 @@
 .navbar {
     transition: top 0.3s ease-in-out;
+    z-index: 1000;
 }
 
 .navbar.hide {
@@ -16,7 +17,7 @@
     right: 0;
     height: 100vh;
     width: 250px;
-    z-index: 999;
+    z-index: 2000;
     backdrop-filter: blur(10px);
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
     display: none;
